# parseonly

./: README.md  pyproject.toml
examples/: cpp_xla.py
parseonly/: __init__.py  grammar.py  reader.py  spanstr.py  utils.py
parseonly/cpp/: __init__.py  grammar.py  utils.py
parseonly/cxx/: grammar.py
parseonly/tests/: test_grammar.py  test_grammar_cpp.py  test_grammar_cxx.py  test_spanstr.py
