[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "parseonly"
requires-python = ">=3.11"
authors = [{name = "Pearu Peterson", email = "pearu.peterson@gmail.com"}]
description = "A Python package for parsing tasks only"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    "Topic :: Software Development",
]
dynamic = ["version"]

dependencies = []

[project.optional-dependencies]

test = [
    "pytest",
    "coverage",
    "pytest-mock",
]

dev = [
    "pre-commit",
]

[project.urls]
Home = "https://github.com/pearu/parseonly"
Source = "https://github.com/pearu/parseonly"

[tool.setuptools.packages.find]
include = ["parseonly", "parseonly.tests"]  # package names should match these glob patterns (["*"] by default)
exclude = [".*", "*~", "*/*~", "*/*/*~", "*/__pycache__", "*/*/__pycache__"]

[tool.black]
line-length = 127
target-version = ["py311", "py312", "py313"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rsx -v"
testpaths = [
    "parseonly/tests",
]

[tool.setuptools_scm]
version_file = "parseonly/_version.py"
